# ocr-demo

./: .gitignore  README.md  docker-compose.yml  ecosystem.config.js  env.example  package.json  pnpm-lock.yaml
apps/gateway/: Dockerfile  package.json
apps/gateway/src/: app.module.ts  main.ts
apps/gateway/src/files/: files.controller.ts  files.module.ts  files.service.ts
apps/gateway/src/health/: health.controller.ts
apps/gateway/src/ocr/: http-ocr.service.ts  ocr.controller.ts  ocr.module.ts
apps/gateway/src/services/: ocr-client.service.ts
apps/web/: .env.example  Dockerfile  README.md  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/api/ocr/process/: route.ts
apps/web/src/components/: ocr-demo.tsx
apps/web/src/lib/: api-client.ts
scripts/: setup-docker.sh  setup-localhost.sh  setup.sh
services/ocr/: Dockerfile  pyproject.toml  requirements.txt  start_server.sh
services/ocr/app/: http_server.py
